spec/error_while_with_do.expected
spec/error_while_with_do.kex:7:4: error: Expected 'end' to close main block, got Eof
Aborted: fix syntax errors before running.
